<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="Programma_2" Id="{ccfc2342-ac26-4787-a6a4-498199d0b244}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Programma_2
VAR
	zetGedaan: BOOL;
	
	spelActief: BOOL;
	knipperTimer: INT;
	knipperInterval: INT;
	winnaar: INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Zet doen door de huidige speler
IF spelActief THEN
    IF GVL.Player_1 THEN
        // Speler 1 (Driehoek) zet
        IF GVL.Rechthoek_1 AND NOT (GVL.Rondje_1 OR GVL.Driehoek_1) THEN
            GVL.Driehoek_1 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_2 AND NOT (GVL.Rondje_2 OR GVL.Driehoek_2) THEN
            GVL.Driehoek_2 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_3 AND NOT (GVL.Rondje_3 OR GVL.Driehoek_3) THEN
            GVL.Driehoek_3 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_4 AND NOT (GVL.Rondje_4 OR GVL.Driehoek_4) THEN
            GVL.Driehoek_4 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_5 AND NOT (GVL.Rondje_5 OR GVL.Driehoek_5) THEN
            GVL.Driehoek_5 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_6 AND NOT (GVL.Rondje_6 OR GVL.Driehoek_6) THEN
            GVL.Driehoek_6 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_7 AND NOT (GVL.Rondje_7 OR GVL.Driehoek_7) THEN
            GVL.Driehoek_7 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_8 AND NOT (GVL.Rondje_8 OR GVL.Driehoek_8) THEN
            GVL.Driehoek_8 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_9 AND NOT (GVL.Rondje_9 OR GVL.Driehoek_9) THEN
            GVL.Driehoek_9 := TRUE;
            zetGedaan := TRUE;
        END_IF;

    ELSIF GVL.Player_2 THEN
        // Speler 2 (Rondje) zet
        IF GVL.Rechthoek_1 AND NOT (GVL.Rondje_1 OR GVL.Driehoek_1) THEN
            GVL.Rondje_1 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_2 AND NOT (GVL.Rondje_2 OR GVL.Driehoek_2) THEN
            GVL.Rondje_2 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_3 AND NOT (GVL.Rondje_3 OR GVL.Driehoek_3) THEN
            GVL.Rondje_3 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_4 AND NOT (GVL.Rondje_4 OR GVL.Driehoek_4) THEN
            GVL.Rondje_4 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_5 AND NOT (GVL.Rondje_5 OR GVL.Driehoek_5) THEN
            GVL.Rondje_5 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_6 AND NOT (GVL.Rondje_6 OR GVL.Driehoek_6) THEN
            GVL.Rondje_6 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_7 AND NOT (GVL.Rondje_7 OR GVL.Driehoek_7) THEN
            GVL.Rondje_7 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_8 AND NOT (GVL.Rondje_8 OR GVL.Driehoek_8) THEN
            GVL.Rondje_8 := TRUE;
            zetGedaan := TRUE;
        ELSIF GVL.Rechthoek_9 AND NOT (GVL.Rondje_9 OR GVL.Driehoek_9) THEN
            GVL.Rondje_9 := TRUE;
            zetGedaan := TRUE;
        END_IF;
    END_IF;

    // Na het zetten, controleer of er een winnaar is
    IF zetGedaan THEN
        // Controleer of speler 1 heeft gewonnen
        IF (GVL.Driehoek_1 AND GVL.Driehoek_2 AND GVL.Driehoek_3) OR  // Horizontaal
           (GVL.Driehoek_4 AND GVL.Driehoek_5 AND GVL.Driehoek_6) OR
           (GVL.Driehoek_7 AND GVL.Driehoek_8 AND GVL.Driehoek_9) OR
           (GVL.Driehoek_1 AND GVL.Driehoek_4 AND GVL.Driehoek_7) OR  // Verticaal
           (GVL.Driehoek_2 AND GVL.Driehoek_5 AND GVL.Driehoek_8) OR
           (GVL.Driehoek_3 AND GVL.Driehoek_6 AND GVL.Driehoek_9) OR
           (GVL.Driehoek_1 AND GVL.Driehoek_5 AND GVL.Driehoek_9) OR  // Diagonaal
           (GVL.Driehoek_3 AND GVL.Driehoek_5 AND GVL.Driehoek_7) THEN
            winnaar := 1;  // Speler 1 wint
            spelActief := FALSE;  // Stop het spel
            GVL.Player_1_Lamp := TRUE;  // Zet de lamp van speler 1 aan
            GVL.Player_2_Lamp := FALSE; // Zet de lamp van speler 2 uit
        ELSIF (GVL.Rondje_1 AND GVL.Rondje_2 AND GVL.Rondje_3) OR  // Horizontaal
               (GVL.Rondje_4 AND GVL.Rondje_5 AND GVL.Rondje_6) OR
               (GVL.Rondje_7 AND GVL.Rondje_8 AND GVL.Rondje_9) OR
               (GVL.Rondje_1 AND GVL.Rondje_4 AND GVL.Rondje_7) OR  // Verticaal
               (GVL.Rondje_2 AND GVL.Rondje_5 AND GVL.Rondje_8) OR
               (GVL.Rondje_3 AND GVL.Rondje_6 AND GVL.Rondje_9) OR
               (GVL.Rondje_1 AND GVL.Rondje_5 AND GVL.Rondje_9) OR  // Diagonaal
               (GVL.Rondje_3 AND GVL.Rondje_5 AND GVL.Rondje_7) THEN
            winnaar := 2;  // Speler 2 wint
            spelActief := FALSE;  // Stop het spel
            GVL.Player_2_Lamp := TRUE;  // Zet de lamp van speler 2 aan
            GVL.Player_1_Lamp := FALSE; // Zet de lamp van speler 1 uit
        END_IF;

        // Start de knipperfunctie als er een winnaar is
        IF winnaar > 0 THEN
            knipperTimer := knipperTimer + 1; // Tel de tijd op
            IF knipperTimer >= knipperInterval THEN
                knipperTimer := 0;
                IF winnaar = 1 THEN
                    GVL.Player_1_Lamp := NOT GVL.Player_1_Lamp; // Knipper de lamp van speler 1
                ELSIF winnaar = 2 THEN
                    GVL.Player_2_Lamp := NOT GVL.Player_2_Lamp; // Knipper de lamp van speler 2
                END_IF;
            END_IF;
        END_IF;

        zetGedaan := FALSE; // Reset zet status na verwerking
    END_IF;
END_IF;
]]></ST>
    </Implementation>
    <LineIds Name="Programma_2">
      <LineId Id="399" Count="109" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>